# small3d

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  DoxygenLayout.xml  LICENSE  README-DEV-SUBPROJECT  README.md  appveyor.yml  build-android.bat  build-android.sh  build-ios.sh  build-mingw.bat  build-vs.bat  build.sh  changelog.md  changelog.txt  conanfile.py  xcode.md
android/: .gitignore  CMakeLists.txt  README  build.gradle  gradle.properties  settings.gradle  tests.cpp
android/app/: CMakeLists.txt  CMakeListsOpenGLES.txt  CMakeListsVulkan.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/resources/models/: boxes.glb
android/app/src/main/assets/resources/sounds/: README
android/app/src/main/java/com/dimi309/small3d_tests/: Small3dTests.java
android/app/src/main/res/values/: ic_launcher_background.xml  strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
cmake/: FindGLEW.cmake  FindGLFW.cmake  FindOGG.cmake  FindPORTAUDIO.cmake  FindPortaudio.cmake  FindSMALL3D.cmake  FindVKZOS.cmake  FindVORBIS.cmake  FindVULKAN_HELPER.cmake  Findsmall3d.cmake  README.txt
conan_io/: .gitignore  CMakeLists.txt  conandata.yml  conanfile.py  src.CMakeLists.txt
conan_io/test_package/: CMakeLists.txt  conanfile.py
docs/: .gitignore  Doxyfile  DoxygenLayout.xml  README.txt  SimpleModel.md  SwitchingBetweenIntelNvidia.md  _base_path_8hpp.html  _base_path_8hpp_source.html  _binary_file_8hpp.html  _binary_file_8hpp_source.html  _bounding_box_set_8hpp.html  _bounding_box_set_8hpp_source.html  _file_8hpp.html  _file_8hpp_source.html  _get_tokens_8hpp.html  _get_tokens_8hpp_source.html  _glb_file_8cpp.html  _glb_file_8hpp.html  _glb_file_8hpp_source.html  _image_8hpp.html  _image_8hpp_source.html  _logger_8hpp.html  _logger_8hpp_source.html  _material_8hpp.html  _material_8hpp_source.html  _math_8hpp.html  _math_8hpp_source.html  _model_8hpp.html  _model_8hpp_source.html  _oct_pyramid_8hpp_source.html  _quaternion_8hpp.html  _quaternion_8hpp_source.html  _renderer_8hpp.html  _renderer_8hpp_source.html  _scene_object_8hpp.html  _scene_object_8hpp_source.html  _sound_8hpp.html  _sound_8hpp_source.html  _time_8hpp.html  _time_8hpp_source.html  (+155 more)
docs-source/: changelog.md  custom.css  subprojects.md  topics.md  tutorial.md  vs.md  xcode.md
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  defines_0.js  enums_0.js  enums_1.js  (+57 more)
doxygen/: .gitignore  Doxyfile  DoxygenLayout.xml  README.txt
doxygen/RelatedPages/: ChooseEmulateLinuxOpenGL.md  SimpleModel.md  SwitchingBetweenIntelNvidia.md
doxygen/blog/: AnUpdateAfterAllTheseYears.md  ChooseEmulateLinuxOpenGL.md  SimpleModel.md  SwitchingBetweenIntelNvidia.md
doxygen/notes/: SimpleModel.md
format-converter/: CMakeLists.txt  format_converter.cpp
include/small3d/: BasePath.hpp  BinaryFile.hpp  BoundingBoxSet.hpp  File.hpp  GetTokens.hpp  GlbFile.hpp  Image.hpp  Logger.hpp  Material.hpp  Math.hpp  Model.hpp  Quaternion.hpp  Renderer.hpp  SceneObject.hpp  Sound.hpp  Time.hpp  WavefrontFile.hpp  Windowing.hpp
ios/: .gitignore  README  ViewController.h  ViewController.mm  flags.c  flags.h  interop.h  interop.m
ios-opengles/: .gitignore
ios-opengles/small3d-Tests-ios/: AppDelegate.m  ViewController.h  ViewController.m  main.m
ios-opengles/small3d-Tests-ios.xcodeproj/: project.pbxproj
ios/small3d-Tests-ios/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
ios/small3d-Tests-ios.xcodeproj/: project.pbxproj
ios/small3d-Tests-ios.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/small3d-Tests-ios/Base.lproj/: Main.storyboard
opengl/include/small3d/: Renderer.hpp
opengl/resources/shaders/: perspectiveMatrixLightedShader.vert  textureShader.frag
opengl/resources/shadersOpenGLES/: perspectiveMatrixLightedShader.vert  textureShader.frag
opengl/src/: Renderer.cpp
opengl33/include/small3d/: Renderer.hpp
opengl33/resources/shaders/: perspectiveMatrixLightedShader.vert  textureShader.frag
opengl33/src/: Renderer.cpp
resources/models/: boxes.blend  goat.glb  goatAndTree.blend  goatAndTree.glb  goatStaticPose.glb  goatTexture.glb  goatUnscaled.glb
resources/shaders/: perspectiveMatrixLightedShader.spv  perspectiveMatrixLightedShader.vert  perspectiveMatrixLightedShaderNoJoints.vert  simpleFragmentShader.frag  simpleFragmentShader.spv  simpleShader.frag  simpleShader.vert  simpleVertexShader.spv  simpleVertexShader.vert  textureShader.frag  textureShader.spv
resources/shadersOpenGLES/: perspectiveMatrixLightedShader.vert  textureShader.frag
resources/sounds/: README
scripts/: build-android.bat  build-android.sh  build-ios-32-64-universal.sh  build-ios-universal.sh  build-ios.sh  build-mingw.bat  build-vs.bat  build.sh  compile-shaders.bat  compile-shaders.sh
src/: BasePath.cpp  BasePath.hpp  BinaryFile.cpp  BoundingBoxSet.cpp  CMakeLists.txt  File.cpp  GetTokens.cpp  GlbFile.cpp  Image.cpp  Logger.cpp  Material.cpp  Math.cpp  Model.cpp  OctPyramid.cpp  OctPyramid.hpp  Quaternion.cpp  Renderer.cpp  SceneObject.cpp  Sound.cpp  Time.cpp  UnitTests.cpp  UnitTests.hpp  WavefrontFile.cpp  Windowing.cpp  small3d_android.c  small3d_android.h  unit_tests.cpp  vkzos.c  vkzos.h  vulkan_helper.c  vulkan_helper.h
src/FormatConverter/: CMakeLists.txt  format_converter.cpp
src/ModelConverter/: CMakeLists.txt  model_converter.cpp
src/UnitTests/: CMakeLists.txt  OctPyramid.cpp  OctPyramid.hpp  UnitTests.cpp  UnitTests.hpp  unit_tests.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
unit-tests/: CMakeLists.txt  UnitTests.cpp  UnitTests.hpp
(+15 files in other folders)
